--- a/Vasquez,J_My_First_Webpage.html
+++ b/Vasquez,J_My_First_Webpage.html
@@ -8,7 +8,9 @@
     <h1><mark>My Personal Passion</mark></h1>
     <h2><u><i><p style= "color:red;">5 Things I ♥ About Art<u></i>
 <ol start="1">
-<img src="https://images.pexels.com/photos/24259758/pexels-photo-24259758/free-photo-of-people-watching-the-mona-lisa-painting-the-louvre-museum-in-paris.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="150" height="150">
+<img src="https://thumbs.dreamstime.com/b/hand-drawn-illustration-human-head-mind-brain-power-energy-connected-to-universe-power-abstract-art-hand-drawn-332136086.jpg" width="170" height="180">
+<img src="https://images.pexels.com/photos/1781709/pexels-photo-1781709.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="170" height="180">
+<img src="https://images.pexels.com/photos/542556/pexels-photo-542556.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="170" height="180">
   <li>Art history reflects human thought</li>
   <li>Art can be a form of self-expression</li>
   <li>Art can be a form of communication</li>
@@ -22,6 +24,6 @@
   <li>LIquitex gouache(acrylic paint)</li>
   <li>Gamblin paints</li>
 </ul>
-<img src="https://media.istockphoto.com/id/96372752/vector/black-and-white-portrait-of-leonardo-da-vinci.jpg?s=612x612&w=0&k=20&c=HvDvq5tnhrlG_Q1XSQ9hdWqxuB6w2nzx8AFTns1IJ7c=" width="170" height="180">
+<img src="https://images.pexels.com/photos/4113084/pexels-photo-4113084.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" width="180" height="250">
 <blockquote>"Learning never exhausts the mind"-Leonardo Da Vinci</blockquote>
  <p>Webpage designed by<br><p style="color:green;">Junely Vasquez</p>
