--- a/Vasquez,J_My_First_Webpage.html
+++ b/Vasquez,J_My_First_Webpage.html
@@ -46,4 +46,34 @@
         </li>
         <li>
             <h3>Surrealism</h3>
-            <img src="https://
+            <img src="https://media.istockphoto.com/id/523692032/vector/man-on-a-boat-in-the-outer-space.jpg?s=612x612&w=0&k=20&c=SufLmc2BaljWQHEJhbQZ7m95J5T_Pcjw5n96UDWEQq4=" width="170" height="180">
+        </li>
+    </ul>
+    <hr>
+    <h2>My Favorite Artists and Why</h2>
+    <ul>
+        <li>
+            <h3>Leonardo Da Vinci</h3>
+            <ul>
+                <li>Master of Realism and anatomy</li>
+                <li>Created famous works like <i>Mona Lisa</i> and <i>The Last Supper</i></li>
+                <li>His sketches influenced science and engineering</li>
+                <img src="https://media.istockphoto.com/id/96372752/vector/black-and-white-portrait-of-leonardo-da-vinci.jpg?s=612x612&w=0&k=20&c=HvDvq5tnhrlG_Q1XSQ9hdWqxuB6w2nzx8AFTns1IJ7c=" width="170" height="180">
+                <li><a href="https://en.wikipedia.org/wiki/Leonardo_da_Vinci" target="_blank">Click here to read more about him!</a></li>
+            </ul>
+        </li>
+        <li>
+            <h3>Vincent Van Gogh</h3>
+            <ul>
+                <li>Known for expressive brushstrokes and vibrant colors</li>
+                <li>Painted <i>Starry Night</i> and <i>Sunflowers</i></li>
+                <img src="https://www.shutterstock.com/image-vector/vincent-van-gogh-willem-600nw-2323708947.jpg" width="170" height="180">
+                <li><a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank">Click here to read more about him!</a></li>
+            </ul>
+        </li>
+    </ul>
+    <hr>
+    <blockquote>"Learning never exhausts the mind" - Leonardo Da Vinci</blockquote>
+    <p>Webpage designed by<br>Junely Vasquez</p>
+</body>
+</html>
