--- a/Vasquez,J_My_First_Webpage.html
+++ b/Vasquez,J_My_First_Webpage.html
@@ -11,7 +11,7 @@
         </a>
     </p>
     <hr>
-    <h2><u><i style="color:red;">4 of my Favorite Art Supplies</i></u></h2>
+    <h2><u><i style="color:purple;">4 of my Favorite Art Supplies</i></u></h2>
     <img src="https://media.istockphoto.com/id/1294268802/photo/alcohol-based-sketch-drawing-copic-style-markers-brush-and-chisel-double-ended-for.jpg?s=612x612&w=0&k=20&c=qeh4wdRvOhVPCM-Qt9GqQj2jjN0bCOZNEI3CPAZ9Lec=" width="170" height="180">
     <img src="https://media.istockphoto.com/id/517497166/photo/set-of-watercolor-paints-brushes-for-painting.jpg?s=612x612&w=0&k=20&c=78OnlVPdAdcxExHHci2RIknEhbbldCFBizbc6hd0tDg=" width="170" height="180">
     <img src="https://media.istockphoto.com/id/696737982/photo/many-color-fine-liners-in-a-circle-isolated-on-white-background.jpg?s=612x612&w=0&k=20&c=7iPIT-a3vwK03WHz25Jnd1NJULOsZgl_etlcSVj01Ts=" width="170" height="180">
@@ -34,7 +34,7 @@
         </li>
     </ol>
     <hr>
-    <h2 style="color:blue;">Drawing Styles I Recommend You Try!</h2>
+    <h2 style="color:red;">Drawing Styles I Recommend You Try!</h2>
     <ul>
         <li>
             <h3>Realism</h3>
